// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`excel-formula-engine array works 1`] = `
Object {
  "formula": "A1:A2+B1:B2",
  "value": Object {
    "type": "array",
    "value": Array [
      Array [
        Object {
          "type": "number",
          "value": 3,
        },
      ],
      Array [
        Object {
          "message": "Value Not Available Error!",
          "type": "error",
          "value": "#N/A",
        },
      ],
    ],
  },
}
`;

exports[`excel-formula-engine array works 2`] = `
Object {
  "formula": "A1:A2+B1:C1",
  "value": Object {
    "type": "array",
    "value": Array [
      Array [
        Object {
          "type": "number",
          "value": 3,
        },
        Object {
          "type": "number",
          "value": 5,
        },
      ],
      Array [
        Object {
          "message": "Value Not Available Error!",
          "type": "error",
          "value": "#N/A",
        },
        Object {
          "message": "Value Not Available Error!",
          "type": "error",
          "value": "#N/A",
        },
      ],
    ],
  },
}
`;

exports[`excel-formula-engine array works 3`] = `
Object {
  "formula": "A1:B2+C1:D2",
  "value": Object {
    "type": "array",
    "value": Array [
      Array [
        Object {
          "type": "number",
          "value": 5,
        },
        Object {
          "type": "number",
          "value": 9,
        },
      ],
      Array [
        Object {
          "message": "Value Not Available Error!",
          "type": "error",
          "value": "#N/A",
        },
        Object {
          "message": "Value Not Available Error!",
          "type": "error",
          "value": "#N/A",
        },
      ],
    ],
  },
}
`;

exports[`excel-formula-engine array works 4`] = `
Object {
  "formula": "9+C1:D2",
  "value": Object {
    "type": "array",
    "value": Array [
      Array [
        Object {
          "type": "number",
          "value": 13,
        },
        Object {
          "type": "number",
          "value": 16,
        },
      ],
      Array [
        Object {
          "type": "number",
          "value": 9,
        },
        Object {
          "type": "number",
          "value": 9,
        },
      ],
    ],
  },
}
`;

exports[`excel-formula-engine compute works 3`] = `
Array [
  Array [
    Object {
      "adr": "A1",
      "value": Object {
        "type": "number",
        "value": 1,
      },
    },
    Object {
      "adr": "B1",
      "value": Object {
        "formula": "a1+1",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 2,
        },
      },
    },
    Object {
      "adr": "C1",
      "value": Object {
        "formula": "b1+2",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 4,
        },
      },
    },
    Object {
      "adr": "D1",
      "value": Object {
        "formula": "c1+3",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 7,
        },
      },
    },
    Object {
      "adr": "E1",
      "value": Object {
        "formula": "c1+4",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 8,
        },
      },
    },
    Object {
      "adr": "F1",
      "value": Object {
        "formula": "d1+h1",
        "type": "formula",
        "value": Object {
          "message": "",
          "type": "error",
          "value": "#CYCLE!",
        },
      },
    },
    Object {
      "adr": "G1",
      "value": Object {
        "formula": "f1",
        "type": "formula",
        "value": Object {
          "message": "",
          "type": "error",
          "value": "#CYCLE!",
        },
      },
    },
    Object {
      "adr": "H1",
      "value": Object {
        "formula": "g1",
        "type": "formula",
        "value": Object {
          "message": "",
          "type": "error",
          "value": "#CYCLE!",
        },
      },
    },
    Object {
      "adr": "I1",
      "value": Object {
        "formula": "f1",
        "type": "formula",
        "value": Object {
          "message": "",
          "type": "error",
          "value": "#CYCLE!",
        },
      },
    },
    Object {
      "adr": "A3",
      "value": Object {
        "formula": "sum(a1:c2)",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 7,
        },
      },
    },
    Object {
      "adr": "B3",
      "value": Object {
        "type": "number",
        "value": 9,
      },
    },
    Object {
      "adr": "C3",
      "value": Object {
        "formula": "sum(a1:b3)",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 19,
        },
      },
    },
    Object {
      "adr": "D3",
      "value": Object {
        "type": "number",
        "value": 13,
      },
    },
    Object {
      "adr": "A4",
      "value": Object {
        "formula": "a3+1",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 8,
        },
      },
    },
    Object {
      "adr": "B4",
      "value": Object {
        "formula": "d1+10",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 17,
        },
      },
    },
    Object {
      "adr": "C4",
      "value": Object {
        "formula": "b3+6",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 15,
        },
      },
    },
  ],
  Array [],
]
`;

exports[`excel-formula-engine deleteRows works 1`] = `
Array [
  Array [
    Object {
      "adr": "A1",
      "value": Object {
        "formula": "sum(#REF!)",
        "type": "formula",
        "value": Object {
          "message": "",
          "type": "error",
          "value": "#REF!",
        },
      },
    },
    Object {
      "adr": "B1",
      "value": Object {
        "type": "number",
        "value": 9,
      },
    },
    Object {
      "adr": "C1",
      "value": Object {
        "formula": "sum(A1:B1)",
        "type": "formula",
        "value": Object {
          "message": "",
          "type": "error",
          "value": "#REF!",
        },
      },
    },
    Object {
      "adr": "D1",
      "value": Object {
        "type": "number",
        "value": 13,
      },
    },
    Object {
      "adr": "A2",
      "value": Object {
        "formula": "A1+1",
        "type": "formula",
        "value": Object {
          "message": "",
          "type": "error",
          "value": "#REF!",
        },
      },
    },
    Object {
      "adr": "B2",
      "value": Object {
        "formula": "#REF!+10",
        "type": "formula",
        "value": Object {
          "message": "",
          "type": "error",
          "value": "#REF!",
        },
      },
    },
    Object {
      "adr": "C2",
      "value": Object {
        "formula": "B1+6",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 15,
        },
      },
    },
  ],
  Array [],
]
`;

exports[`excel-formula-engine insertRows works 1`] = `
Array [
  Array [
    Object {
      "adr": "A3",
      "value": Object {
        "type": "number",
        "value": 1,
      },
    },
    Object {
      "adr": "B3",
      "value": Object {
        "formula": "A3+1",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 2,
        },
      },
    },
    Object {
      "adr": "C3",
      "value": Object {
        "formula": "B3+2",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 4,
        },
      },
    },
    Object {
      "adr": "D3",
      "value": Object {
        "formula": "C3+3",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 7,
        },
      },
    },
    Object {
      "adr": "E3",
      "value": Object {
        "formula": "C3+4",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 8,
        },
      },
    },
    Object {
      "adr": "F3",
      "value": Object {
        "formula": "D3+H3",
        "type": "formula",
        "value": Object {
          "message": "",
          "type": "error",
          "value": "#CYCLE!",
        },
      },
    },
    Object {
      "adr": "G3",
      "value": Object {
        "formula": "F3",
        "type": "formula",
        "value": Object {
          "message": "",
          "type": "error",
          "value": "#CYCLE!",
        },
      },
    },
    Object {
      "adr": "H3",
      "value": Object {
        "formula": "G3",
        "type": "formula",
        "value": Object {
          "message": "",
          "type": "error",
          "value": "#CYCLE!",
        },
      },
    },
    Object {
      "adr": "I3",
      "value": Object {
        "formula": "F3",
        "type": "formula",
        "value": Object {
          "message": "",
          "type": "error",
          "value": "#CYCLE!",
        },
      },
    },
    Object {
      "adr": "A5",
      "value": Object {
        "formula": "sum(A3:C4)",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 7,
        },
      },
    },
    Object {
      "adr": "B5",
      "value": Object {
        "type": "number",
        "value": 9,
      },
    },
    Object {
      "adr": "C5",
      "value": Object {
        "formula": "sum(A3:B5)",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 19,
        },
      },
    },
    Object {
      "adr": "D5",
      "value": Object {
        "type": "number",
        "value": 13,
      },
    },
    Object {
      "adr": "A6",
      "value": Object {
        "formula": "A5+1",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 8,
        },
      },
    },
    Object {
      "adr": "B6",
      "value": Object {
        "formula": "D3+10",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 17,
        },
      },
    },
    Object {
      "adr": "C6",
      "value": Object {
        "formula": "B5+6",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 15,
        },
      },
    },
  ],
  Array [],
]
`;

exports[`excel-formula-engine recompute works 1`] = `
Array [
  Array [
    Object {
      "adr": "A1",
      "value": Object {
        "type": "number",
        "value": 1,
      },
    },
    Object {
      "adr": "B1",
      "value": Object {
        "formula": "a1+1",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 2,
        },
      },
    },
    Object {
      "adr": "C1",
      "value": Object {
        "type": "number",
        "value": 10,
      },
    },
    Object {
      "adr": "D1",
      "value": Object {
        "formula": "c1+3",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 13,
        },
      },
    },
    Object {
      "adr": "E1",
      "value": Object {
        "formula": "c1+4",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 14,
        },
      },
    },
    Object {
      "adr": "F1",
      "value": Object {
        "formula": "d1+h1",
        "type": "formula",
        "value": Object {
          "message": "",
          "type": "error",
          "value": "#CYCLE!",
        },
      },
    },
    Object {
      "adr": "G1",
      "value": Object {
        "formula": "f1",
        "type": "formula",
        "value": Object {
          "message": "",
          "type": "error",
          "value": "#CYCLE!",
        },
      },
    },
    Object {
      "adr": "H1",
      "value": Object {
        "formula": "g1",
        "type": "formula",
        "value": Object {
          "message": "",
          "type": "error",
          "value": "#CYCLE!",
        },
      },
    },
    Object {
      "adr": "I1",
      "value": Object {
        "formula": "f1",
        "type": "formula",
        "value": Object {
          "message": "",
          "type": "error",
          "value": "#CYCLE!",
        },
      },
    },
    Object {
      "adr": "A3",
      "value": Object {
        "formula": "sum(a1:c2)",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 13,
        },
      },
    },
    Object {
      "adr": "B3",
      "value": Object {
        "type": "number",
        "value": 9,
      },
    },
    Object {
      "adr": "C3",
      "value": Object {
        "formula": "sum(a1:b3)",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 25,
        },
      },
    },
    Object {
      "adr": "D3",
      "value": Object {
        "type": "number",
        "value": 13,
      },
    },
    Object {
      "adr": "A4",
      "value": Object {
        "formula": "a3+1",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 14,
        },
      },
    },
    Object {
      "adr": "B4",
      "value": Object {
        "formula": "d1+10",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 23,
        },
      },
    },
    Object {
      "adr": "C4",
      "value": Object {
        "formula": "b3+6",
        "type": "formula",
        "value": Object {
          "type": "number",
          "value": 15,
        },
      },
    },
  ],
  Array [],
]
`;
